# mcp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml
src/mcp_sl/: config.py  http_client.py  middleware.py  server.py
src/mcp_sl/skylar_compliance/: apis.py  models.py
src/mcp_sl/skylar_one/: apis.py  models.py
tests/: test_config.py  test_http_client.py
